# ReiLua-Enhanced

./: .gitignore  ASSET_LOADING.md  BUILD_SCRIPTS.md  CMakeLists.txt  CUSTOMIZATION.md  DOCUMENTATION_INDEX.md  EMBEDDING.md  MACOS.md  README.md  SPLASH_SCREENS.md  UPGRADE_SUMMARY.md  ZED_EDITOR_SETUP.md  build_release.bat  build_release.sh  embed_font.py  embed_logo.py  resources.rc  zed.sample.settings.json
docs/: API.md  ASSET_LOADING.md  BUILD_SCRIPTS.md  CNAME  CUSTOMIZATION.md  DOCUMENTATION_INDEX.md  EMBEDDING.md  SPLASH_SCREENS.md  UPGRADE_SUMMARY.md  ZED_EDITOR_SETUP.md  generate.py  manual.html  reference.html  style.css
docs_md/: ASSET_LOADING.md  BUILD_SCRIPTS.md  DOCUMENTATION_INDEX.md  ZED_EDITOR_SETUP.md
fonts/: attributions.md
html_docs/: README.md  index.html
include/: core.h  lua_core.h  splash.h  state.h
projects/: README.md
scripts/: build_dev.bat  build_dev.sh  build_release.bat  build_release.sh  create_empty_assets.py  create_project.sh  embed_assets.py  embed_lua.py
scripts/macos/: build_static_libs.sh  create_app_bundle.sh
src/: core.c  lua_core.c  main.c  shapes.c  splash.c  state.c  text.c
template/: COMMON_ISSUES.md  CREATION_SUMMARY.md  DIALOG_STATE_PATTERN.md  README.md  WINDOW_CONFIG.md  WINDOW_QUICK_REF.md  main.lua
template/assets/: README.md
template/lib/: animation.lua  gamestate.lua
template/states/: game.lua  menu.lua
tools/: ReiLua_API.lua
